--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
                     </div>
                 </div>      
         </div>
-        <span class="skill">我的技能</span>
+        <span class="skill" id="skill">我的技能</span>
                     
+
     </div>
     <!-- 三屏 -->
     <div class="section three">
@@ -115,9 +116,12 @@
     <!-- 四屏 -->
     <div class="section four">
         <ul class="txt">
-            <li>自行封装了轮播、定时器、放大镜、手机号验证等。</li>
-            <li>用JS完成购物车及登录页面的验证。</li>
-            <li>用html5、css3实现动画效果,提高用户体验。<a href="https://github.com/liyuling486/shopping">github链接</a></li>
+            <li>使用H5、css3、JS完成页面交互   功能</li>
+            <li>使用原生JS自行封装了轮播、定时器、放大镜等模块</li>
+            <li>使用ES6语法，提高了开发效率</li>
+            <li>并且用用JS完成购物车及手机号页面的验证</li>
+            <li>使用aos、wow、Animate.css等实现了动画效果,提高用户体验</li>
+            <li><a href="https://github.com/liyuling486/shopping">github链接</a></li>
         </ul>
     </div>
     <!-- 五屏 -->
@@ -131,7 +135,6 @@
         </ul>
     </div>
 </div>
-
 
 
 </body>
