--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li>项目采用vuex处理各组件间的通讯，通过vue-cli 快速搭建开发环境。</li>
             <li>使用了钩子函数实现到底部继续加载，通过 axios 与后端通信。</li>
             <li>运用vue.js中的指令和服务与后台接口对接，进行数据交互，进行页面渲染，实现功能 模块的判断。</li>
-            <li>运用swiper框架进行部分页面的设计。<a href="https://github.com/liyuling486/keep">github链接</a></li>
+            <li>运用swiper框架进行部分页面的设计。<a href="https://github.com/liyuling486/keep" target="_blank">github链接</a></li>
         </ul>
     </div>
     <!-- 四屏 -->
@@ -121,7 +121,7 @@
             <li>使用ES6语法，提高了开发效率</li>
             <li>并且用用JS完成购物车及手机号页面的验证</li>
             <li>使用aos、wow、Animate.css等实现了动画效果,提高用户体验</li>
-            <li><a href="https://github.com/liyuling486/shopping">github链接</a></li>
+            <li><a href="https://github.com/liyuling486/shopping" target="_blank">github链接</a></li>
         </ul>
     </div>
     <!-- 五屏 -->
@@ -135,6 +135,7 @@
         </ul>
     </div>
 </div>
+
 
 
 </body>
